	property is like task or specify, and is followed by some number
	of statements, which are ended with an endproperty keyword.
	(electric-verilog-tab): Support Emacs 22.2 style handling of tab
	in a highlighted region: indent each line in region according to
	mode.  Supply this so it works in XEmacs and older Emacs.

2008-09-05  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* whitespace.el: Fix auto-cleanup on kill prevents killing read-only
	buffers (bug#360). New version 11.2.1.
	(whitespace-action): New value `warn-read-only' to give a warning when
	buffer is read-only and whitespace action is cleanup or auto-cleanup.
	(whitespace-cleanup, whitespace-cleanup-region): Code fix.
	(whitespace-warn-read-only): New fun.

2008-09-05  Chong Yidong  <cyd@stupidchicken.com>

	* international/quail.el: Require help-mode.
	(quail-help-init): Function removed.
	(quail-keyboard-layout-button, quail-keyboard-customize-button):
	Define directly.

	* dired.el (dired-get-filename): Rewrite octal escape character
	processor (bug#885).

2008-09-05  Eli Zaretskii  <eliz@gnu.org>

	* cus-edit.el (custom-button-pressed): Default to inverse-video.

	* term/pc-win.el (msdos-face-setup): Setup faces for all frames,
	not just for terminal-frame.

2008-09-05  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window--try-to-split-window): Don't split when window
	is not splittable in last disjunct.  (Bug#888)

2008-09-05  Kenichi Handa  <handa@m17n.org>

	* language/tibetan.el: Fix setting of composition-function-table.

	* composite.el (find-composition): Mention about the automatic
	composition in the docstring.

	* descr-text.el (describe-char): Fix handling of automatic
	composition.

2008-09-04  Juanma Barranquero  <lekktu@gmail.com>

	* net/tramp-cache.el (tramp-flush-file-function): Fix typo in docstring.
	(tramp-parse-connection-properties): Reflow docstring.

2008-09-04  Kim F. Storm  <storm@cua.dk>

	* ido.el (ido-buffer-internal, ido-file-internal): Pass on other-window